--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ message: >
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>{{ site.title | default: site.github.repository_name }}<h1>
+        <h1>{{ site.title | default: site.github.repository_name }}</h1>
         {{ page.message }}
       <table>
         <thead>
